--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -717,7 +717,7 @@ figure img[src$=".svg"] {
 	do variable+invert tricks to get a white copy of the logo as a hack.
  */
 @media only screen and (max-width: 649px) {
-    a#footer-logo::after {
+    #footer-decoration-container a.footer-logo::after {
         filter: invert(1);
         background-color: var(--GW-body-background-color-inverted);
     }
@@ -896,6 +896,5 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link id="initial-styles" rel="stylesheet" type="text/css" href="/static/css/head.css?v=1685938929">
-<script src="/static/js/head.js?v=1685939535"></script>
-<link rel="preload" href="/static/img/icon/icons.svg?v=1685939536" as="image">
+<link id="initial-styles" rel="stylesheet" type="text/css" href="/static/css/head.css?v=1685939779">
+<script src="/static/js/head.js?v=1685939779"></script>
