--- a/template/default.html
+++ b/template/default.html
@@ -83,10 +83,10 @@
 
     <main>
       <nav id="sidebar">
-        <a id="logo" rel="home me contents" href="/index" title="Homepage: categorized list of articles index">
+        <a class="logo" rel="home me contents" href="/index" title="Homepage: categorized list of articles index">
           <svg viewBox="0 0 64 75" alt="Gwern.net Site Logo (a Fraktur blackletter capital G)"><use href="/static/img/logo/logo-smooth.svg#logo" /></svg>
         </a>
-        <div id="sidebar-links">
+        <div class="sidebar-links">
         <a class="icon-not site  link-page link-annotated" href="/about"                 title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
         <a class="icon-not me    link-page link-annotated" href="/me"                    title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
         <a class="icon-not new   link-page link-annotated" href="/changelog"             title="Changelog of what's new or updated">Changes</a>
@@ -103,14 +103,14 @@
       <article> $if(index)$ $else$
         <div class="markdownBody" id="page-metadata">
           $if(description)$
-            <div id="page-description" title="Short description of page."><p>$description$</p></div>$endif$
+            <div class="page-description" title="Short description of page."><p>$description$</p></div>$endif$
             $if(tagsHTML)$ $tagsHTML$ $endif$
-            <div id="page-metadata-block">
-              $if(author)$ <span id="page-author" title="Author of this page.">by: <em>$author$</em></span>$endif$
-              <span id="page-date-range"><span id="page-creation" title="Date page contents were begun."><em>$created$</em></span>–<span id="page-source"><a title="Link to latest revision of the raw Markdown text source for this page, '$title$': $url$.page" class="icon-not" href="$url$.page"><span id="page-modified" title="Date of last major modification to this page."><em>$modified$</em></span></a></span></span>
-              <span id="page-status" title="Writing status of current page: ranges 'abandoned'/'notes'/'draft'/'in progress'/'finished'"><em>$status$</em></span>
-              <span id="page-confidence"><a href="/about#confidence-tags" title="Explanation of 'confidence' metadata: probability of overall being meaningfully correct, expressed as Kesselman Estimative Words (ranging 0–100%: 'certain'/'highly likely'/'likely'/'possible'/'unlikely'/'highly unlikely'/'remote'/'impossible')" class="icon-not">certainty</a>: <em>$confidence$</em></span>
-              <span id="page-importance"><a href="/about#importance-tags" title="Explanation of 'importance' metadata: rating 1–10 about how much a topic matters to the world." class="icon-not">importance</a>: <em>$importance$</em></span>
+            <div class="page-metadata-fields">
+              $if(author)$ <span class="page-author" title="Author of this page.">by: <em>$author$</em></span>$endif$
+              <span class="page-date-range"><span class="page-creation" title="Date page contents were begun."><em>$created$</em></span>–<span class="page-source"><a title="Link to latest revision of the raw Markdown text source for this page, '$title$': $url$.page" class="icon-not" href="$url$.page"><span class="page-modified" title="Date of last major modification to this page."><em>$modified$</em></span></a></span></span>
+              <span class="page-status" title="Writing status of current page: ranges 'abandoned'/'notes'/'draft'/'in progress'/'finished'"><em>$status$</em></span>
+              <span class="page-confidence"><a href="/about#confidence-tags" title="Explanation of 'confidence' metadata: probability of overall being meaningfully correct, expressed as Kesselman Estimative Words (ranging 0–100%: 'certain'/'highly likely'/'likely'/'possible'/'unlikely'/'highly unlikely'/'remote'/'impossible')" class="icon-not">certainty</a>: <em>$confidence$</em></span>
+              <span class="page-importance"><a href="/about#importance-tags" title="Explanation of 'importance' metadata: rating 1–10 about how much a topic matters to the world." class="icon-not">importance</a>: <em>$importance$</em></span>
               $if(backlinksYes)$<span class="backlinks"><a class="backlinks" href="#backlinks" title="Reverse citations/backlinks for this page (the list of other pages which link to this page)." class="icon-not">backlinks</a></span>$endif$
               $if(similarsYes)$<span class="similars"><a class="similars" href="#similars" title="Similar links for this link (by text embedding)." class="icon-not">similar</a></span>$endif$
               $if(linkbibYes)$<span class="link-bibliography"><a href="#link-bibliography" title="Bibliography of links cited in this page (forward citations)." class="icon-not">bibliography</a></span>$endif$
@@ -149,8 +149,8 @@
         </nav>
 
         <div class="markdownBody" id="footer">
-          <p class="anonymous-feedback">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not" id="anonymous-feedback-link">[&hairsp;Send Anonymous Feedback&hairsp;]</a>
+          <p id="anonymous-feedback">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not" class="anonymous-feedback-link">[&hairsp;Send Anonymous Feedback&hairsp;]</a>
           </p>
 
 		  <div id="x-of-the-day">
@@ -164,8 +164,8 @@
 
       </article>
 
-      <div id="footer-logo-container">
-        <a rel="home me contents" title="Gwern.net homepage" id="footer-logo" href="/index">​</a>
+      <div id="footer-decoration-container">
+        <a rel="home me contents" title="Gwern.net homepage" class="footer-logo" href="/index">​</a>
       </div>
     </main>
 
