--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -898,3 +898,4 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 </style>
 <link id="initial-styles" rel="stylesheet" type="text/css" href="/static/css/head.css?v=1685939779">
 <script src="/static/js/head.js?v=1685939779"></script>
+<link rel="preload" href="/static/img/icon/icons.svg?v=1685992304" as="image">
