--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2411,18 +2411,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1685993476#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1685996139#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1685993476#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1685996139#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1685993476#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1685996139#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1685993476#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1685996139#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -3861,18 +3861,6 @@ section.footnotes .footnote-self-link {
     text-align: center;
     font-variant-caps: small-caps;
 }
-#footer > p:first-child::after {
-    content: var(--GW-image-single-black-star-svg);
-    display: block;
-    width: 1em;
-    margin: 3rem auto 0 auto;
-    opacity: 0.3;
-}
-@media all and (max-width: 649px) {
-    #footer > p:first-child::after {
-        margin: 2.5rem auto 0 auto;
-    }
-}
 
 
 /***************/
@@ -4125,27 +4113,56 @@ ol.link-bibliography-list-compact > li::before {
 /* X OF THE DAY */
 /****************/
 
+#x-of-the-day {
+	position: relative;
+	margin-top: 2.5rem;
+	padding: 2rem 1.5rem 3.5rem 1.5rem;
+	border: 1px solid #ccc;
+}
+
+#x-of-the-day::before,
+#x-of-the-day::after {
+	content: "";
+	position: absolute;
+	left: 0.5rem;
+	width: calc(100% - 1rem);
+	height: 2rem;
+	background-image: 
+		url('/static/img/ornament/three-wavy-lines-ornament-left.svg'),
+		url('/static/img/ornament/three-wavy-lines-ornament-right.svg');	
+	background-repeat: no-repeat;
+	background-size: 4rem 100%;
+	background-position: 
+		center left, 
+		center right;
+	opacity: 0.15;
+}
+#x-of-the-day::before {
+	top: 0.5rem;
+}
+#x-of-the-day::after {
+	bottom: 0.5rem;
+	transform: scaleY(-1);
+}
+
+/*******************/
 /*  Quote of the day.
  */
-#footer .epigraph {
+ 
+#x-of-the-day .quote-of-the-day {
     margin: 2.25em auto 3.25em auto;
 }
 @media only screen and (max-width: 649px) {
-    #footer .epigraph {
+    #x-of-the-day .quote-of-the-day {
         margin: 2.5em 1em 3.75em 1em;
     }
 }
 
-/*  Annotation of the day.
- */
-#aotd {
-    margin-bottom: 2em;
-}
-
+/*******************/
 /*  Site of the day.
  */
 
-.site-of-the-day {
+#x-of-the-day .site-of-the-day {
     --box-size: 4em;
     --box-padding-top: 1em;
     --box-padding-bottom: 3em;
@@ -4157,7 +4174,7 @@ ol.link-bibliography-list-compact > li::before {
     padding-right: calc(var(--box-horizontal-offset) * 0.25);
 }
 
-.site-of-the-day blockquote {
+#x-of-the-day .site-of-the-day blockquote {
     --background-color: var(--GW-body-background-color);
 
     margin: 3.5em auto 2.75em auto;
@@ -4178,7 +4195,7 @@ ol.link-bibliography-list-compact > li::before {
     align-items: center;
 }
 @media only screen and (max-width: 649px) {
-    .site-of-the-day blockquote {
+    #x-of-the-day .site-of-the-day blockquote {
         font-size: calc((17/18) * var(--GW-body-text-font-size));
         margin: 3.5em auto 2.75em auto;
         padding:
@@ -4189,8 +4206,8 @@ ol.link-bibliography-list-compact > li::before {
     }
 }
 
-.site-of-the-day blockquote::before,
-.site-of-the-day blockquote::after {
+#x-of-the-day .site-of-the-day blockquote::before,
+#x-of-the-day .site-of-the-day blockquote::after {
     content: "";
     position: absolute;
     width: var(--box-total-size);
@@ -4201,21 +4218,28 @@ ol.link-bibliography-list-compact > li::before {
     background-size: cover;
     top: 0;
 }
-.site-of-the-day blockquote::before {
+#x-of-the-day .site-of-the-day blockquote::before {
     left: 0;
 }
-.site-of-the-day blockquote::after {
+#x-of-the-day .site-of-the-day blockquote::after {
     right: 0;
     background-position: right;
 }
 
-.site-of-the-day blockquote p {
+#x-of-the-day .site-of-the-day blockquote p {
     position: relative;
-    z-index: 1;
-}
-#footer .site-of-the-day blockquote p {
     margin: 0;
     line-height: 1;
+    z-index: 1;
+}
+
+/*************************/
+/*  Annotation of the day.
+ */
+
+#x-of-the-day .annotation-of-the-day {
+	width: fit-content;
+	margin: auto;
 }
 
 
@@ -4224,7 +4248,7 @@ ol.link-bibliography-list-compact > li::before {
 /*********************/
 
 #footer-decoration-container {
-    margin: 2rem 0 1rem 0;
+    margin: 1.5rem 0 1rem 0;
     line-height: 0;
 }
 
@@ -5308,14 +5332,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1685993476#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1685996139#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1685993476#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1685996139#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5448,7 +5472,7 @@ body.lorem div[class^='drop-cap'] {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1685993476#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1685996139#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5871,14 +5895,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1685993476#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1685996139#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1685993476#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1685996139#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6942,7 +6966,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1685993476#question');
+    background-image: url('/static/img/icon/icons.svg?v=1685996139#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7430,7 +7454,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1685993476#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1685996139#circle-notch-solid');
 
     pointer-events: none;
 }
