--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -304,6 +304,10 @@
 	 */
 	--GW-nav-header-link-color: #999;
 	--GW-nav-header-link-hover-color: #000;
+
+	/*	X of the day.
+	 */
+	--GW-x-of-the-day-border-color: #ccc;
 }
 :root {
     --GW-popups-popup-title-bar-pattern: var(--GW-image-pattern-dotted-e6e6e6-on-fff-2x-gif);
@@ -624,6 +628,10 @@
 	 */
 	--GW-nav-header-link-color: #8b8b8b;
 	--GW-nav-header-link-hover-color: #fff;
+
+	/*	X of the day.
+	 */
+	--GW-x-of-the-day-border-color: #5c5c5c;
 }
 :root {
     /*  Adjust background color to prevent pixels from turning off (contrary to popular belief, pixels turning off saves trivial energy, like <1% in measurements, and causes nasty scrolling/update jank due to delay in pixels turning back on), and improve contrast with the white.
@@ -896,5 +904,5 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link id="initial-styles" rel="stylesheet" type="text/css" href="/static/css/head.css?v=1685993477">
-<script src="/static/js/head.js?v=1685993476"></script>
+<link id="initial-styles" rel="stylesheet" type="text/css" href="/static/css/head.css?v=1685996402">
+<script src="/static/js/head.js?v=1685996139"></script>
